# financial-multi-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_local_model.md  collect_results.py  docker-compose.yml  pyproject.toml  setup.py
src/: app.py  config.py  llm_router.py
src/auth/: __init__.py  credentials.example.yaml  login.py  quota.py
src/crews/: __init__.py  agents_definitions.py  concurrent.py  factory.py  group_chat.py  group_chat_v0.py  group_chat_v1.py  parallel.py  sequential.py  tasks_definitions.py
src/services/alphavantage/: __init__.py  alphavantage_client.py
src/services/context_storage/: service.py
src/services/finnhub/: __init__.py  finnhub_client.py  finnhub_sentiment.py
src/services/qdrant/: service.py
src/services/reddit/: reddit_client.py
src/tools/: alphavantage_tools.py  context_storage.py  context_storage_tools.py  finnhub_sentiment_tool.py  qdrant_tools.py  yahoo_analysis_tool.py  yahoo_fundamental_analysis_tool.py  yahoo_news_tool.py  yahoo_technical_analysis_tool.py
src/utils/: chart_builder.py  pdf_exporter.py  report_evaluator.py
tmp/: generate_latex_eval_table.py  res_concurrent.tex  res_parallel.tex  res_sequential.tex
